Thu Nov  4 08:10:45 EST 2004	JK Lowden <jklowden@schemamania.org>
	* TODO updated ct-lib items
	
Tue Nov  2 09:46:31 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/ct.c support CS_VER_STRING (ML: 2 November 2004)
	* locales.conf added Brazil
	* doc/htdoc/faq.html fix typo 
	* samples/test.pl accept query as last parameter
	* src/tds/config.c s/THREAD_SAFE/_REENTRANT/

Thu Oct 28 15:15:55 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/binary_test.c src/odbc/unittests/common.h:
	* src/odbc/unittests/convert_error.c src/odbc/unittests/data.c:
	* src/odbc/unittests/date.c src/odbc/unittests/earlybind.c:
	* src/odbc/unittests/funccall.c src/odbc/unittests/genparams.c:
	* src/odbc/unittests/moreandcount.c src/odbc/unittests/norowset.c:
	* src/odbc/unittests/params.c src/odbc/unittests/prepare_results.c:
	* src/odbc/unittests/preperror.c src/odbc/unittests/print.c:
	* src/odbc/unittests/putdata.c src/odbc/unittests/raiserror.c:
	* src/odbc/unittests/rebindpar.c src/odbc/unittests/t0001.c:
	* src/odbc/unittests/t0004.c src/odbc/unittests/tables.c:
	* src/odbc/unittests/testodbc.c src/odbc/unittests/transaction.c:
	* src/odbc/unittests/type.c src/odbc/unittests/typeinfo.c:
	- fixes for 64-bit ODBC

Thu Oct 28 14:39:10 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: more checks on odbc
	* include/tdsodbc.h src/odbc/convert_tds2sql.c:
	* src/odbc/convert_tds2sql.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/prepare_query.c src/odbc/prepare_query.h:
	-  fixes for 64-bit ODBC
	* src/apps/bsqldb.c: remove warning
	* doc/userguide.sgml: updates
	* include/bkpublic.h include/cspublic.h include/cstypes.h:
	* include/ctlib.h include/ctpublic.h include/dblib.h:
	* include/des.h include/md4.h include/md5.h include/replacements.h:
	* include/sqldb.h include/sqlfront.h include/sybdb.h:
	* include/syberror.h include/sybfront.h include/tds.h:
	* include/tds_configs.h include/tds_sysdep_private.h: